@@ -1,0 +1,12 @@
+
+http=":22742"
+
+[conflux.recon]
+reconPort=22741
+httpPort=22742
+partners=["192.168.122.1:11370"]
+filters=["yminsky.dedup"]#,"yminsky.merge"]
+
+[conflux.recon.leveldb]
+path="./leveldb-ptree"
+
