@@ -1,25 +1,21 @@
 #
 # Hockeypuck configuration file
 #
-# Options are the same as command-line option
-# flags. Run hockeypuck with -help for a comprehensive list.
-#
-http=:11371
-logfile=/var/log/hockeypuck/hockeypuck-mgo.log
-#
-# MongoDB connection
-#
-#server=localhost
-#
+# Most options are also configurable as command-line flags.
+# Run hockeypuck with -help for a comprehensive list.
+
+http=":11371"
+logfile="/var/log/hockeypuck/hockeypuck-mgo.log"
+#webroot="/var/lib/hockeypuck/www"
+ 
+mgo.server=localhost  # MongoDB connection
+
 # PKS server setup
-#
-## PKS sync mail from: address
-#pks-from=pgp-public-keys@yourhost.yourdomain.com
-## Send keys to these PKS servers
-#pks-to=pgp-public-keys@other1.example.com,pgp-public-keys@other2.example.com
-## SMTP hostname:port
-#smtp-host=smtp.gmail.com:587
-## SMTP account username, if necessary
-#smtp-user=hkp.account
-## SMTP account password
-#smtp-pass=changeme
+#[pks]
+#from="pgp-public-keys@yourhost.yourdomain.com"  # PKS sync mail from: address
+#to="pgp-public-keys@other1.example.com,pgp-public-keys@other2.example.com"  # Send keys to these PKS servers
+#[pks.smtp]
+#host="smtp.gmail.com:587"  # SMTP hostname:port
+#user="hkp.account"  # SMTP account username, if necessary
+#pass="changeme"  # SMTP account password
+
